<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.LaunchDetailsFragment">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/carouselContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/carouselViewPager2"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>

            <LinearLayout
                android:id="@+id/dotsContainerLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"/>
            <ImageView
                android:id="@+id/noImageAvailableIv"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/noimage"
                android:visibility="gone"/>
        </FrameLayout>

    <LinearLayout
        android:id="@+id/overViewDetailLL"
        android:layout_below="@id/carouselContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/missionNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/title"
            android:textAppearance="?attr/textAppearanceHeadline6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Location : "
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"/>
        <TextView
            android:id="@+id/siteNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            tools:text="@string/site_name"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?android:attr/textColorSecondary"/>

        <TextView
            android:id="@+id/launchDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/secondary_text"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"/>

        <TextView
            android:id="@+id/rocketNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            tools:text="@string/rocketName"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"/>

        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wasLaunchSuccessTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wasLaunchSuccess"
                android:layout_gravity="center_vertical"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"/>

            <ImageView
                android:id="@+id/wasSuccessLaunchIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cross"/>
        </LinearLayout>

    </LinearLayout>
        <TextView
            android:id="@+id/detailsTv"
            android:layout_below="@id/overViewDetailLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Description:"
            android:paddingStart="16dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"/>
    <TextView
        android:id="@+id/missionDescriptionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsTv"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"/>

</RelativeLayout>

</ScrollView>